--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,22 +1,24 @@
-<%= form_with model: @record, local: true do |f| %>
-    <%= render "devise/shared/error_messages", model: f.object %>
+<div class="main-container">
+  <%= form_with model: @record, local: true do |f| %>
+      <%= render "devise/shared/error_messages", model: f.object %>
 
-    <div class="field">
-      <%= f.label :prefecture_id, '都道府県', class: "form-label" %>
-    <%= f.collection_select(:prefecture_id, Prefecture.all, :id, :name, {include_blank: "---"}, {class:"select-box", id:"item-prefecture"}) %>
-    </div>
+      <div class="field">
+        <%= f.label :prefecture_id, '都道府県', class: "form-label" %>
+      <%= f.collection_select(:prefecture_id, Prefecture.all, :id, :name, {include_blank: "---"}, {class:"select-box", id:"item-prefecture"}) %>
+      </div>
 
-    <div class="field">
-      <%= f.label :image, '画像', class: "form-label" %>
-      <%= f.file_field :image, class: "image-form" %>
-    </div>
+      <div class="field">
+        <%= f.label :image, '画像', class: "form-label" %>
+        <%= f.file_field :image, class: "image-form" %>
+      </div>
 
-    <div class="field">
-      <%= f.label :content, '内容', class: "form-label" %>
-      <%= f.text_area :content, autocomplete: "content", class: "record-text" %>
-    </div>
+      <div class="field">
+        <%= f.label :content, '内容', class: "form-label" %>
+        <%= f.text_area :content, autocomplete: "content", class: "record-text" %>
+      </div>
 
-    <div class="actions">
-      <%= f.submit "保存" %>
-    </div>
-<% end %>
+      <div class="actions">
+        <%= f.submit "保存" %>
+      </div>
+  <% end %>
+</div>
