--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,9 +1,11 @@
+<div class="main-container">
   <%= "#{@user.nickname}さんの制覇率は#{@achievement_rate}%です" %>
 
-<div class="records">
-  <div>旅の思い出</div>
-  <% @records.each do |record| %>
-    <%= link_to "#{record.prefecture[:name]}", record_path(record.id) %> 
-  <% end %>
+  <div class="records">
+    <div>旅の思い出</div>
+    <% @records.each do |record| %>
+      <%= link_to "#{record.prefecture[:name]}", record_path(record.id) %> 
+    <% end %>
+  </div>
 </div>
 
