--- a/app/views/devise/passwords/new.html.erb
+++ b/app/views/devise/passwords/new.html.erb
@@ -1,16 +1,21 @@
-<div class="title">パスワードをお忘れですか？</div>
+<div class="main-container">
+  <div class="title">パスワードをお忘れですか？</div>
 
-<%= form_with model: @user, url: user_password_path, local: true do |f| %>
+  <%= form_with model: @user, url: user_password_path, local: true do |f| %>
   <%= render "devise/shared/error_messages", resource: resource %>
 
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  <div class="resetting">
+    <%= f.label :email, 'メールアドレス', class: "resetting-email" %>
+    <%= f.email_field :email, autofocus: true, autocomplete: "email", class: "resetting-email-form" %>
   </div>
 
   <div class="actions">
-    <%= f.submit "Send me reset password instructions" %>
+    <%= f.submit "パスワードをリセットする" %>
   </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
+  <% end %>
+  <div class="devise-link-container">
+    <div class="devise-link">
+  <%= render "devise/shared/links" %>
+    </div>
+  </div>
+</div>
