--- a/app/views/devise/mailer/reset_password_instructions.html.erb
+++ b/app/views/devise/mailer/reset_password_instructions.html.erb
@@ -2,7 +2,7 @@
 
 <p>パスワードの変更は、下記のURLから可能です。</p>
 
-<p><%= link_to 'パスワードを変更する', edit_password_url(@resource, reset_password_token: @token, host: "localhost") %></p>
+<p><%= link_to 'パスワードを変更する', edit_password_url(@resource, reset_password_token: @token, host: "52.194.67.144") %></p>
 
 <p>リクエストしていない場合は、このメールを無視してください。</p>
 <p>上のリンクにアクセスして新しいパスワードを作成するまで、パスワードは変更されません。</p>
