パスワード変更画面の修正

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -15,7 +15,7 @@
     </div>
 
     <div class="field">
-      <%= f.label :password, 'パスワード', class: "registration-password-form-label" %>
+      <%= f.label :password, 'パスワード(6文字以上)', class: "registration-password-form-label" %>
       <%= f.password_field :password, autocomplete: "new-password", class: "registration-input-form" %>
     </div>
 
