--- a/app/views/devise/passwords/edit.html.erb
+++ b/app/views/devise/passwords/edit.html.erb
@@ -6,10 +6,7 @@
     <%= f.hidden_field :reset_password_token %>
 
     <div class="field">
-      <%= f.label :password, "新しいパスワード", class: "form-label" %><br />
-      <% if @minimum_password_length %>
-        <em>(<%= @minimum_password_length %> characters minimum)</em><br />
-      <% end %>
+      <%= f.label :password, "新しいパスワード(6文字以上)", class: "form-label" %><br />
       <%= f.password_field :password, autofocus: true, autocomplete: "new-password", class: "new-password-form" %>
     </div>
 
@@ -23,5 +20,9 @@
     </div>
   <% end %>
 
-  <%= render "devise/shared/links" %>
+  <div class="devise-link-container">
+    <div class="devise-link">
+      <%= render "devise/shared/links" %>
+    </div>
+  </div>
 </div>
