--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -1,4 +1,7 @@
-<div class="main-container">  
+<div class="main-container"> 
+  <div class="description-container">
+    <p class="description">47prefecturesは、47都道府県制覇を目的とした旅の記録アプリです。</p>
+  </div> 
   <div class="container">
     <div class="swiper">
       <div class="swiper-wrapper">
