--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -1,1 +1,5 @@
-<%= "#{@user.nickname}さんの次の旅先は#{@random_data.name}です" %>
+<div class="main-container">
+  <div class="destination" >
+  <%= "#{@user.nickname}さんの次の旅先は#{@random_data.name}です" %>
+  </div>
+</div>
