--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,7 +16,7 @@
       <div class="inner">
         <div class="nav">
           <div class="nav__left">
-            <%= link_to 'Japan', root_path, class: :logo %>
+            <%= link_to '47prefectures', root_path, class: :logo %>
           </div>
           <%# ログインしているときは以下を表示するようにしましょう %>
           <% if user_signed_in? %>
@@ -38,7 +38,7 @@
     </header>
     <%= yield %>
     <footer class="footer">
-      <p class="copyright">Copyright © PROTO SPACE All rights reserved.</p>
+      <p class="copyright">Copyright © 47prefectures All rights reserved.</p>
     </footer>
   </body>
 </html>
