--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -313,6 +313,19 @@ input, select {
   text-align: center;
 }
 
+.destination-image{
+  width: 80%;
+  height: 400px;
+  margin: 30px auto 0 auto;
+  background-color: #333333;
+}
+
+
+.attraction{
+  width: 100%;
+  height: 400px;
+  background-color: #32CD32;
+}
 
 /* パスワード再設定画面 */
 .resetting{
