--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -35,7 +35,7 @@
     </div>
 
     <script>
-      const swiper = new Swiper(".swiper", {
+      {const swiper = new Swiper(".swiper", {
       loop: true, // ループ
       speed: 3000, // 少しゆっくり(デフォルトは300)
       autoplay: { // 自動再生
@@ -52,7 +52,7 @@
         nextEl: ".swiper-button-next",
         prevEl: ".swiper-button-prev",
       },
-    });
+    })};
     </script>
   </div>
 
