--- a/app/views/destinations/index.html.erb
+++ b/app/views/destinations/index.html.erb
@@ -5,4 +5,7 @@
   <div class="destination-image">
   <%= image_tag "#{@attraction.photo}", class: 'attraction' %>
   </div>
+  <div class="attraction_name"> 
+  <%= "(#{@attraction_name.name})" %>
+  </div>
 </div>
