--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -87,6 +87,7 @@ input, select {
 .header {
   background-color: #dcdcdc;
   padding: 15px 20px;
+  height: 28px;
 }
 
 .nav {
@@ -165,7 +166,7 @@ input, select {
   width: 150px;
   height: 70px;
   border-radius: 10px;
-  background-color: #32CD32;
+  background-color: #b0c4de;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -287,7 +288,7 @@ input, select {
 .record-container{
   width: 800px;
   height: 150px;
-  background-color: #32CD32;
+  background-color: #b0c4de;
   border-radius: 15px;
   margin: 15px auto;
   padding-top: 20px;
@@ -324,12 +325,32 @@ input, select {
 .attraction{
   width: 100%;
   height: 400px;
-  background-color: #32CD32;
+  background-color: #b0c4de;
 }
 
 .attraction_name{
   text-align: right;
   width: 90%;
+}
+
+/* 投稿詳細画面 */
+.record_container{
+  width:40%;
+  height:400px;
+  border: 1px solid #333333;
+  border-radius: 15px;
+  margin: 0 auto;
+  background-color: #b0c4de;
+}
+
+.prefecture_name{
+  font-size: 20px;
+  margin-top: 10px;
+  text-align: center;
+}
+
+.record_content{
+  font-size: 15px;
 }
 
 /* パスワード再設定画面 */
