--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
     <%= "#{@user.nickname}さんの制覇率は#{@achievement_rate}%です！" %>
   </div>
 
-  <div class="record-container" >
+  <div class="records-container" >
     <% if @records.present?%>
       <div class="records">旅の思い出</div>
         <div class="record">    
