--- a/app/views/records/index.html.erb
+++ b/app/views/records/index.html.erb
@@ -15,7 +15,7 @@
         </div>
 
         <div class="swiper-slide">
-          <%= image_tag asset_path('oomagari.jpg'), alt: '' %>
+          <%= image_tag asset_path('akita.jpg'), alt: '' %>
         </div>
 
         <div class="swiper-slide">
