タイトル変更

--- a/app/views/records/new.html.erb
+++ b/app/views/records/new.html.erb
@@ -1,5 +1,5 @@
 <div class="main-container">
-  <div class="title">記録</div>
+  <div class="title">新規投稿</div>
   <div class="record-container">
   <%= form_with model: @record, local: true do |f| %>
       <%= render "devise/registrations/error_message", model: f.object %>
